--- a/Simple News/Simple News/View/Base.lproj/Main.storyboard
+++ b/Simple News/Simple News/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5RH-a6-wsR">
-    <device id="retina6_1" orientation="portrait">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController title="Top Stories" id="oO2-F4-xao" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hh2-Z2-aFT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XEn-gB-P4n">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="128" width="768" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="Vs1-qH-6Iv" kind="embed" id="pql-EL-hBf"/>
@@ -63,29 +63,29 @@
             <objects>
                 <viewController title="Simple News" id="mW3-hb-Z2R" customClass="NewsViewController" customModule="Simple_News" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="y5o-CY-zvh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zq8-kc-jOo">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArticleTableViewCell" id="GUV-IQ-zpM" customClass="ArticleTableViewCell" customModule="Simple_News" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="200"/>
+                                        <rect key="frame" x="0.0" y="28" width="768" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GUV-IQ-zpM" id="JzI-Eg-p6c">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="199.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="768" height="199.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Police consider terrorism as motive after 'one dead' and 'multiple' people injured in Dutch tram shooting - ITV News" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSl-4O-zZ1">
-                                                    <rect key="frame" x="20" y="11" width="374" height="64.5"/>
+                                                    <rect key="frame" x="20" y="11" width="728" height="43"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11:30am - 18th April 2019" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJx-wD-Bq2">
-                                                    <rect key="frame" x="20" y="171" width="144" height="18"/>
+                                                    <rect key="frame" x="20" y="171" width="468" height="18"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="18" id="TBh-Xd-6IM"/>
                                                     </constraints>
@@ -94,7 +94,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Itv.com" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Yx-rz-xzn">
-                                                    <rect key="frame" x="352" y="171" width="42" height="18"/>
+                                                    <rect key="frame" x="706" y="171" width="42" height="18"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="18" id="J14-aZ-uZ5"/>
                                                     </constraints>
@@ -103,7 +103,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b4n-pZ-zhy">
-                                                    <rect key="frame" x="144" y="84.5" width="247" height="72"/>
+                                                    <rect key="frame" x="144" y="63" width="583.5" height="43"/>
                                                     <string key="text">Police say they are considering terrorism as a motive after one person was reportedly killed and multiple people were injured in a shooting on a tram in the Dutch city of Utrecht.
 Officers, including some who were heavily armed, flooded the area after the inâ€¦</string>
                                                     <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
@@ -111,7 +111,7 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="default-news" translatesAutoresizingMaskIntoConstraints="NO" id="5it-8R-sYh">
-                                                    <rect key="frame" x="20" y="85" width="116" height="72"/>
+                                                    <rect key="frame" x="15" y="63.5" width="121" height="93.5"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -165,11 +165,11 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
             <objects>
                 <viewController title="Technology" id="riZ-yQ-iGf" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xoh-GS-7eh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u0T-mn-aCA">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="128" width="768" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="Vs1-qH-6Iv" kind="embed" id="vQa-Q4-HwI"/>
@@ -190,11 +190,11 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
             <objects>
                 <viewController title="Entertainment" id="hkZ-Bt-6XU" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="atN-m0-SsP">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CZx-il-7cW">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="128" width="768" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="Vs1-qH-6Iv" kind="embed" id="cQG-bi-ABv"/>
@@ -215,11 +215,11 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
             <objects>
                 <viewController title="Sports" id="1XR-Ev-e94" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OUf-bR-Bqb">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JJY-Ps-oEX">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="128" width="768" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="Vs1-qH-6Iv" kind="embed" id="SoN-Gb-5dh"/>
@@ -240,11 +240,11 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
             <objects>
                 <viewController title="Science" id="GdP-cH-JgF" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DL0-ku-6vx">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iV1-KZ-uaM">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="128" width="768" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="Vs1-qH-6Iv" kind="embed" id="nR6-6T-pNV"/>
@@ -265,11 +265,11 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
             <objects>
                 <viewController title="Health" id="1ph-kh-fMJ" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pcx-Rx-Pvg">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zLO-P0-K15">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="128" width="768" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <segue destination="Vs1-qH-6Iv" kind="embed" id="Kqi-hC-Ad7"/>
@@ -291,7 +291,7 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vs1-qH-6Iv" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="g0m-Yj-kbI">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="102"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -305,12 +305,12 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
         </scene>
     </scenes>
     <resources>
-        <image name="default-news" width="507.3599853515625" height="459.83999633789062"/>
-        <image name="icons8-heart-with-pulse-25" width="18.75" height="18.75"/>
-        <image name="icons8-imac-25" width="18.75" height="18.75"/>
-        <image name="icons8-microscope-25" width="18.75" height="18.75"/>
-        <image name="icons8-soccer-ball-filled-25" width="18.75" height="18.75"/>
-        <image name="icons8-theatre-mask-25" width="18.75" height="18.75"/>
+        <image name="default-news" width="2114" height="1916"/>
+        <image name="icons8-heart-with-pulse-25" width="25" height="25"/>
+        <image name="icons8-imac-25" width="25" height="25"/>
+        <image name="icons8-microscope-25" width="25" height="25"/>
+        <image name="icons8-soccer-ball-filled-25" width="25" height="25"/>
+        <image name="icons8-theatre-mask-25" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="cQG-bi-ABv"/>
