--- a/Simple News/Simple News/View/Base.lproj/Main.storyboard
+++ b/Simple News/Simple News/View/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5RH-a6-wsR">
-    <device id="ipad9_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5RH-a6-wsR">
+    <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -75,17 +73,17 @@
                                         <rect key="frame" x="0.0" y="28" width="768" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GUV-IQ-zpM" id="JzI-Eg-p6c">
-                                            <rect key="frame" x="0.0" y="0.0" width="768" height="199.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="768" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Police consider terrorism as motive after 'one dead' and 'multiple' people injured in Dutch tram shooting - ITV News" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSl-4O-zZ1">
-                                                    <rect key="frame" x="20" y="11" width="728" height="43"/>
+                                                    <rect key="frame" x="20" y="11" width="0.0" height="21.5"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11:30am - 18th April 2019" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJx-wD-Bq2">
-                                                    <rect key="frame" x="20" y="171" width="468" height="18"/>
+                                                    <rect key="frame" x="20" y="171.5" width="144" height="18"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="18" id="TBh-Xd-6IM"/>
                                                     </constraints>
@@ -94,7 +92,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Itv.com" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Yx-rz-xzn">
-                                                    <rect key="frame" x="706" y="171" width="42" height="18"/>
+                                                    <rect key="frame" x="-62" y="171.5" width="42" height="18"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="18" id="J14-aZ-uZ5"/>
                                                     </constraints>
@@ -103,7 +101,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b4n-pZ-zhy">
-                                                    <rect key="frame" x="144" y="63" width="583.5" height="43"/>
+                                                    <rect key="frame" x="144" y="41.5" width="0.0" height="14.5"/>
                                                     <string key="text">Police say they are considering terrorism as a motive after one person was reportedly killed and multiple people were injured in a shooting on a tram in the Dutch city of Utrecht.
 Officers, including some who were heavily armed, flooded the area after the inâ€¦</string>
                                                     <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
@@ -111,7 +109,7 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="default-news" translatesAutoresizingMaskIntoConstraints="NO" id="5it-8R-sYh">
-                                                    <rect key="frame" x="15" y="63.5" width="121" height="93.5"/>
+                                                    <rect key="frame" x="15" y="42" width="121" height="115.5"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
@@ -291,7 +289,7 @@ Officers, including some who were heavily armed, flooded the area after the inâ€
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vs1-qH-6Iv" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="g0m-Yj-kbI">
-                        <rect key="frame" x="0.0" y="20" width="768" height="102"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="102"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
